# spark_lakehouse_RM

./: .gitignore  README.md  api_extractor_example.py  main.py  pyproject.toml  read_deltatable_example.py
bronze/: ingestion.py  workflow.json
gold/: count_episodes_by_year.sql  count_residents_by_local.sql  ingestion.py  workflow.json
libs/: api_extractor.py  ingestor.py
silver/: character.sql  episode.sql  episode_character.sql  ingestion.py  location.sql  location_residents.sql  workflow.json
